[project]
name = "stress-test-rl"
version = "0.1.0"
description = "Stress tests on RL algos under ALE env."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ale-py>=0.10.2",
    "gymnasium[classic-control]>=1.1.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]
